--- a/general/Hampo/app/src/main/res/values/strings.xml
+++ b/general/Hampo/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="nombre_de_usuario">Nombre de usuario</string>
+    <string name="correo_electronico">Correo electrónico</string>
 </resources>
